WebCore:

2009-07-27  Nikolas Zimmermann  <nikolas.zimmermann@torchmobile.com>

        Reviewed by George Staikos.

        [WML] 'onpick' intrinsic event handling missing
        https://bugs.webkit.org/show_bug.cgi?id=27723

        Trigger 'onpick' intrinsic events from WMLOptionElement::setSelectedState().
        All was in place, just forgot to enable the relevant code.

        Fixes manual-tests/wml/select-onpick-event.wml
        Test: wml/option-element-onpick.html

        * wml/WMLOptionElement.cpp:
        (WebCore::WMLOptionElement::setSelectedState):

LayoutTests:

2009-07-27  Nikolas Zimmermann  <nikolas.zimmermann@torchmobile.com>

        Reviewed by George Staikos.

        [WML] 'onpick' intrinsic event handling missing
        https://bugs.webkit.org/show_bug.cgi?id=27723

        Add a new WML layout test covering 'onpick' support.

        * wml/option-element-onpick-expected.txt: Added.
        * wml/option-element-onpick.html: Added.
        * wml/resources/option-element-onpick.js: Added.
        (setupTestDocument):
        (prepareTest):
        (executeTest):


Canonical link: https://commits.webkit.org/38042@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46432 268f45cc-cd09-0410-ab3c-d52691b4dbfc